<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutMovieDetailsFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movieImageMovieDetailsFragment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_250dp"
                android:scaleType="centerCrop"
                android:src="@color/black"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movieTitleMovieDetailsFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:layout_marginBottom="@dimen/margin_40dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20sp"
                app:layout_constraintBottom_toBottomOf="@id/movieImageMovieDetailsFragment"
                app:layout_constraintEnd_toEndOf="@id/movieImageMovieDetailsFragment"
                app:layout_constraintStart_toStartOf="@id/movieImageMovieDetailsFragment" />

            <TextView
                android:id="@+id/movieGenreMovieDetailsFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintBottom_toBottomOf="@id/movieImageMovieDetailsFragment"
                app:layout_constraintEnd_toEndOf="@id/movieTitleMovieDetailsFragment"
                app:layout_constraintStart_toStartOf="@id/movieTitleMovieDetailsFragment" />


            <TextView
                android:id="@+id/movieReleaseDateMovieDetailsFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintStart_toStartOf="@id/movieTitleMovieDetailsFragment"
                app:layout_constraintTop_toBottomOf="@id/movieImageMovieDetailsFragment" />

            <TextView
                android:id="@+id/movieRatingMovieDetailsFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:textSize="@dimen/text_size_20sp"
                app:layout_constraintStart_toStartOf="@id/movieReleaseDateMovieDetailsFragment"
                app:layout_constraintTop_toBottomOf="@id/movieReleaseDateMovieDetailsFragment" />

            <ImageView
                android:id="@+id/movieFavoriteMovieDetailsFragment"
                android:layout_width="@dimen/width_50dp"
                android:layout_height="@dimen/height_50dp"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:src="@drawable/ic_round_favorite_border_24"
                app:layout_constraintBottom_toBottomOf="@id/movieRatingMovieDetailsFragment"
                app:layout_constraintEnd_toEndOf="@id/movieImageMovieDetailsFragment"
                app:layout_constraintTop_toTopOf="@id/movieReleaseDateMovieDetailsFragment" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/labelDescriptionMovieDetailsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/label_description"
            android:textSize="@dimen/text_size_20sp" />

        <TextView
            android:id="@+id/descriptionMovieDetailsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:maxLines="4"
            android:scrollbars="vertical"
            android:textSize="@dimen/text_size_20sp" />

        <TextView
            android:id="@+id/labelDirectorMovieDetailsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:text="@string/label_director"
            android:textSize="@dimen/text_size_20sp" />

        <TextView
            android:id="@+id/directorMovieDetailsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/text_size_20sp" />

        <TextView
            android:id="@+id/labelCastMovieDetailsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:text="@string/label_cast"
            android:textSize="@dimen/text_size_20sp" />

        <TextView
            android:id="@+id/castMovieDetailsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/text_size_20sp" />

        <!--scrollable-->
        <TextView
            android:id="@+id/labelSimilarMoviesMovieDetailsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:text="@string/label_similar_movies"
            android:textSize="@dimen/text_size_20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/similarMoviesRecyclerViewMovieDetailsFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:orientation="horizontal"
            android:scrollbars="horizontal" />

        <TextView
            android:id="@+id/labelReviewsMovieDetailsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:text="@string/label_reviews"
            android:textSize="@dimen/text_size_20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reviewsRecyclerViewMovieDetailsFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp" />

    </LinearLayout>

</ScrollView>